# Calkulator

./: .gitignore  CMakeLists.txt  Calkulator.sh  CmakeLists.txt  main.c
calkulator/: CMakeLists.txt  CmakeLists.txt  main.c
utest/: CMakeLists.txt  utest_addition.c  utest_division.c  utest_multiplication.c  utest_subtraction.c
